--- a/lab2.html
+++ b/lab2.html
@@ -17,5 +17,5 @@
   
   <div id="content"></div>
 
-  <script src="js/DOM.js"></script>
+  <script src="js/https://shreyansh997.github.io/SM_9/DOM.js"></script>
 </body>
