--- a/INdex.html
+++ b/INdex.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <script src="js/ajax-utils.js"></script>
-    <script src="js/script.js"></script>
+    <script src="https://shreyansh997.github.io/SM_9/sm57.js"></script>
+    <script src="https://shreyansh997.github.io/SM_9/script.js"></script>
   </head>
 <body>
   <h1 id="title">Lecture 57</h1>
