--- a/ct2.html
+++ b/ct2.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
   </head>
 <body>
-  <h1 id="title">Lecture 53</h1>
+  <h1 id="title">search</h1>
   
   <p>
-    Say hello to 
+    the marks of tony 
     <input id="name" type="text">
     <button onclick="sayHello();">
       Say it!
