--- a/ct2.html
+++ b/ct2.html
@@ -11,7 +11,7 @@
     the marks of tony 
     <input id="name" type="text">
     <button onclick="sayHello();">
-      Say it!
+      display marks
     </button>
   </p>
 
