--- a/ct2.html
+++ b/ct2.html
@@ -8,7 +8,7 @@
   <h1 id="title">search</h1>
   
   <p>
-    the marks of tony 
+    students name
     <input id="name" type="text">
     <button onclick="sayHello();">
       display marks
