--- a/M3.html
+++ b/M3.html
@@ -1,1 +1,23 @@
 
+
+
+
+
+
+INDEX>HTML
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Roll No</title>
+	<script src="script.js" type="text/javascript"></script>
+</head>
+<body>
+<input type="text" name="" id="name">
+<button onclick="onLoad()">Click</button>
+<p id="demo"></p>
+</body>
+</html>
+
+
+
+
