--- a/M3.html
+++ b/M3.html
@@ -9,7 +9,7 @@ INDEX>HTML
 <html>
 <head>
 	<title>Roll No</title>
-	<script src="script.js" type="text/javascript"></script>
+	<script src="M3.js" type="text/javascript"></script>
 </head>
 <body>
 <input type="text" name="" id="name">
