--- a/M3.html
+++ b/M3.html
@@ -13,7 +13,7 @@ INDEX>HTML
 </head>
 <body>
 <input type="text" name="" id="name">
-<button onclick="onLoad()">Click</button>
+<button onclick="onLoad()">Display</button>
 <p id="demo"></p>
 </body>
 </html>
