--- a/M3.html
+++ b/M3.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Number</title>
+	<h1>Number</h1>
 	<script src="M32.js" type="text/javascript"></script>
 </head>
 <body>
-<input type="text" name="" id="name">
+<input type="text" name="" id="n0">
 <button onclick="onLoad()">Display</button>
 <p id="demo"></p>
 </body>
