--- a/M3.html
+++ b/M3.html
@@ -5,7 +5,7 @@
 	<script src="M32.js" type="text/javascript"></script>
 </head>
 <body>
-<input type="text" name="" id="n0">
+<input type="text" name="" id="name">
 <button onclick="onLoad()">Display</button>
 <p id="demo"></p>
 </body>
