--- a/M3.html
+++ b/M3.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<h1>Number</h1>
-	<script src="M32.js" type="text/javascript"></script>
+	<title></title>
+	<script type="text/javascript" src="js/M32.js.js"></script>
 </head>
 <body>
-<input type="text" name="" id="name">
-<button onclick="onLoad()">Display</button>
-<p id="demo"></p>
+<h1>ENTER NAME HERE</h1>
+<h2>Remove this tag and change the script.html file inside JS folder to script.js </h2>
+<input type="text" name="" id="numberBox">
+<button onclick="loadData();">Display</button>
+<p id="output"></p>
 </body>
 </html>
-
 
 
 
