--- a/M3.html
+++ b/M3.html
@@ -5,7 +5,7 @@
 	<script type="text/javascript" src="js/M32.js.js"></script>
 </head>
 <body>
-<h1>ENTER NAME HERE</h1>
+<h1>ENTER</h1>
 <input type="text" name="" id="numberBox">
 <button onclick="loadData();">Display</button>
 <p id="output"></p>
