--- a/M3.html
+++ b/M3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title></title>
-	<script type="text/javascript" src="js/M32.js"></script>
+	<script type="text/javascript" src="js/scriptss.js"></script>
 </head>
 <body>
 <h1>ENTER</h1>
